<resources>
   <string name="buttonBack">Voltar</string>
   <string name="___LIBRARY___SETTINGS___SECTION___"></string>
   <string name="library_settings">Configurações da biblioteca</string>
   <string name="scan_device_for_new_books">Buscar novos livros no aparelho</string>
   <string name="add_folder">Adicionar pasta</string>
   <string name="archives">Arquivos</string>
   <string name="other">De outros</string>
   <string name="you_need_to_update_the_library">Você precisa atualizar a biblioteca</string>
   <string name="in_the_author_s_name_first_the_surname">No nome do autor, primeiro o apelido</string>
   <string name="orientation">Orientação</string>
   <string name="automatic">Automática</string>
   <string name="landscape">Paisagem</string>
   <string name="portrait">Retrato</string>
   <string name="landscape_180">Paisagem (180)</string>
   <string name="portrait_180">Retrato (180)</string>
   <string name="system_language">Linguagem do sistema</string>
   <string name="system">Sistema</string>
   <string name="small">Pequeno</string>
   <string name="normal">Normal</string>
   <string name="large">Ampla</string>
   <string name="theme">Tema</string>
   <string name="light">Claro</string>
   <string name="black">Escuro</string>
   <string name="theme_color">Cor do tema</string>
   <string name="widget">Ferramenta</string>
   <string name="show">Exposição</string>
   <string name="layout">Layout</string>
   <string name="number_of_books">Número de livros</string>
   <string name="remember_reading_mode">Lembre-se do modo de leitura</string>
   <string name="opening_the_last_book_when_the_application_starts">Abrindo o último livro quando o aplicativo começar</string>
   <string name="show_application_close_dialog_every_time">Mostrar diálogo de fechamento de aplicativos toda vez</string>
   <string name="display_all_file_types_in_folders">Exibir todos os tipos de arquivos em pastas</string>
   <string name="show_the_dialog_what_is_new_for_updates">Mostrar a caixa de diálogo que é novo para atualizações</string>
   <string name="what_is_new_in">O que há de novo em</string>
   <string name="full_list_of_changes_with_images_web_pdf_">Lista completa de alterações com imagens (web, PDF)</string>
   <string name="search_for_text_in_documents">Multi document search</string>
   <string name="search_in_the_subfolders">Pesquisar nas subpastas</string>
   <string name="stop">Pare</string>
   <string name="document_converter_online_">Conversor de documentos (online)</string>
   <string name="book_covers">Coberturas de livros</string>
   <string name="cover_image_size">Tamanho imagem da capa</string>
   <string name="column_count">Contagem de coluna</string>
   <string name="show_book_covers">Mostrar capas de livros</string>
   <string name="enable_effect_of_the_book_cover">Ativar efeito da capa do livro</string>
   <string name="crop_images_in_the_book_cover">Cortar imagens na capa do livro</string>
   <string name="borders_and_shadow_around_the_book_cover">Fronteiras e sombra ao redor da capa do livro</string>
   <string name="tabs_position">Posição das guias</string>
   <string name="show_preferences_tab_in_the_left_menu">Mostre a guia de preferências no menu à esquerda</string>
   <string name="visible">Visível</string>
   <string name="application_user_guide_">Guia de usuario</string>
   <string name="import_or_export_application_settings_to_json_file">De importação ou de aplicação de exportação configurações para arquivo JSON</string>
   <string name="import_">Importar...</string>
   <string name="export_">Exportar...</string>
   <string name="automatic_export_backup">Exportação automática (backup) das configurações da aplicação, progresso da leitura de livros e marcadores.</string>
   <string name="product">Produto</string>
   <string name="version">Versão</string>
   <string name="licence_gnu_gpl_v3_0">Licença: GNU GPL v3.0</string>
   <string name="licenses_for_libraries">Licenças para bibliotecas</string>
   <string name="autor_ivan_ivanenko">Autor: Ivan Ivanenko</string>
   <string name="support">Apoio</string>
   <string name="web">Rede</string>
   <string name="beta_version">Versão beta</string>
   <string name="archive">Arquivo</string>
   <string name="rate_pdf_reader1">Por favor, escreva o seu feedback e avaliar-nos no Google Play é muito importante para nós</string>
   <string name="___PREFERENCES___SECTION___"></string>
   <string name="formatted_text">Texto formatado (pseudo-gráficos)</string>
   <string name="continuous_text">Texto contínuo (sem intervalo de linha)</string>
   <string name="customize_fonts">Personalizar fontes</string>
   <string name="regular_font">Regular fonte</string>
   <string name="bold_font">Negrito</string>
   <string name="italic_font">Itálico</string>
   <string name="bold_italic_font">Font negrito itálico</string>
   <string name="font_for_headers">Fonte para cabeçalhos</string>
   <string name="enable_volume_keys">Ativar teclas de volume</string>
   <string name="reverse_keys">Inverter teclas</string>
   <string name="screen_orientation">Orientação da tela</string>
   <string name="open_in_the_dictionary">Abrir no dicionário</string>
   <string name="remember_dictionary">Lembre-se Dicionário</string>
   <string name="dictionary">Dicionário</string>
   <string name="day">Dia</string>
   <string name="nigth">Noite</string>
   <string name="___READING___SETTINGS___SECTION___"></string>
   <string name="reading_settings">Configurações de leitura</string>
   <string name="folder_with_fonts">Pasta com fontes</string>
   <string name="text_align">Alinhamento de texto</string>
   <string name="width">Largura</string>
   <string name="left">Lado esquerdo</string>
   <string name="right">Lado direito</string>
   <string name="center">Centro</string>
   <string name="custom_css">CSS customizado</string>
   <string name="styles">Styles</string>
   <string name="document_styles">Estilos de documentos</string>
   <string name="user_styles">Estilos do usuário</string>
   <string name="automatic_hyphenation">Hifenização automática</string>
   <string name="empty_line">Linha vazia</string>
   <string name="margin_width">Largura da margem</string>
   <string name="top">Lado superior</string>
   <string name="bottom">Lado inferior</string>
   <string name="links_color_day">Cor dos links (dia)</string>
   <string name="links_color_night">Links de cor (noite)</string>
   <string name="___ADVANCED___SETTINGS___SECTION___"></string>
   <string name="advanced_settings">Configurações avançadas</string>
   <string name="direction_of_scrolling">Direção de rolagem</string>
   <string name="direction_of_reading_rtl_">Direção de leitura (RTL)</string>
   <string name="left_to_rigth">Da esquerda para direita</string>
   <string name="right_to_left">Direita para esquerda</string>
   <string name="right_page_then_left_page_rtl_">Página direita e página esquerda (RTL)</string>
   <string name="rotate_page">Rodar Página</string>
   <string name="rotate_default">Default</string>
   <string name="tap_zone_size">Tamanho Tap-zone</string>
   <string name="customize_tap_zones">Personalize zonas de toque</string>
   <string name="left_side">Lado esquerdo</string>
   <string name="right_side">Lado direito</string>
   <string name="top_side">Lado superior</string>
   <string name="bottom_side">Lado inferior</string>
   <string name="next_page">Próxima página</string>
   <string name="previous_page">Página anterior</string>
   <string name="db_do_nothing">Fazer nada</string>
   <string name="remind_about_rest_every">Lembre sobre o descanso a cada</string>
   <string name="action_on_double_tap">Toque duplo</string>
   <string name="db_auto_scroll">Auto rolagem</string>
   <string name="opening_book_with_losed_lock">Livro de abertura com bloqueio encerrado</string>
   <string name="opening_book_with_cropped_borders">Livro de abertura com bordas cortadas</string>
   <string name="db_auto_alignemnt">Alinhamento automático</string>
   <string name="db_auto_center_horizontally">Centrar horizontalmente</string>
   <string name="zoom_in_zoom_out">Zoom, zoom out</string>
   <string name="enhancements_for_oled_display">Aprimoramentos para tela OLED</string>
   <string name="ignore_annotations_on_click">Ignorar as anotações em clique</string>
   <string name="save_new_annotations_automatically">Salvar novas anotações automaticamente</string>
   <string name="selecting_text_by_letters">Seleção de texto por letras</string>
   <string name="change_the_automatic_scrolling_speed_with_the_volume_keys">Mude a velocidade de rolagem automática com as teclas de volume</string>
   <string name="enable_brightness_adjustment_on_the_left_of_the_screen">Ative o ajuste de brilho à esquerda da tela</string>
   <string name="scroll_speed">Velocidade de rolamento</string>
   <string name="page_quality">A qualidade da página</string>
   <string name="pages_in_memory">Páginas na memória</string>
   <string name="screen_turn_off_after_inactivity_minutes_">Tela desligar após inactividade (minutos)</string>
   <string name="___STATUS___BAR___SETTINGS___SECTION___"></string>
   <string name="status_bar">Barra de status</string>
   <string name="show_status_bar">Mostrar barra de status</string>
   <string name="show_progress_of_reading">Mostrar progresso da leitura</string>
   <string name="enable_rewind_of_pages_using_the_read_progress_line">Habilite o rebobinamento de páginas usando a linha de progresso de leitura</string>
   <string name="text_size">Tamanho do texto</string>
   <string name="line_height">Altura da linha</string>
   <string name="text_color_day">Cor do texto (dia)</string>
   <string name="text_color_night">Cor do texto (noite)</string>
   <string name="___MULTIPLE___SECTIONS___"></string>
   <string name="preferences">Preferências</string>
   <string name="language">Língua</string>
   <string name="font_size">Tamanho da fonte</string>
   <string name="brightness">Brilho</string>
   <string name="bluelight_filter">Filtro BlueLight</string>
   <string name="password">Senha</string>
   <string name="restore_defaults_short">Restaurar padrão</string>
   <string name="customize">Customizar</string>
   <string name="color">Cor</string>
   <string name="horizontal">Horizontal</string>
   <string name="vertical">Vertical</string>
   <string name="minutes">Minutos</string>
   <string name="close_book">Fechar livro</string>
   <string name="background">Antecedentes</string>
   <string name="dialog_color_picker">Escolher cor</string>
   <string name="invalid_color_value">Valor de cor inválido</string>
   <string name="add">Adicionar</string>
   <string name="search">Procurar</string>
   <string name="export_bookmarks">Exportar favoritos</string>
   <string name="simple_scroll_animation">Animação de rolagem simples</string>
   <string name="___TABS___SECTION___"></string>
   <string name="library">Biblioteca</string>
   <string name="extracting_information_from_books">Extrair informações de livros</string>
   <string name="no_author">Nenhum autor</string>
   <string name="no_serie">Sem série</string>
   <string name="no_genre">Nenhum gênero</string>
   <string name="no_language">Sem idioma</string>
   <string name="without_series">Sem série</string>
   <string name="folders">Pastas</string>
   <string name="recent">Recentes</string>
   <string name="clear_all">Limpar tudo</string>
   <string name="search_history_and_autocomplete">Histórico de pesquisa e preenchimento automático</string>
   <string name="press_any_key">Pressione qualquer tecla</string>
   <string name="restore_default_keys">Restaurar padrão de teclas</string>
   <string name="bookmarks">Favoritos</string>
   <string name="contrast">Contraste</string>
   <string name="crop_white_borders">Remover bordas brancas</string>
   <string name="full_screen">Tela cheia</string>
   <string name="msg_loading">Carregando... Por favor, aguarde</string>
   <string name="menu">Cardápio</string>
   <string name="move">Mover</string>
</resources>