<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.foobnix.pdf.search.view.VerticalViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="false" />

    <LinearLayout
        android:id="@+id/musicButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="2dip">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/pageshelper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/pagesBookmark_antigoverificar"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginLeft="4dip"
            android:layout_weight="0"
            android:background="@drawable/bg_border_ltgray_dash2"
            android:src="@drawable/glyphicons_73_bookmark1"
            android:tint="@color/lt_grey_dima"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/floatingBookmark"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/wh_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="4dip"
        android:layout_marginBottom="20dip"
        android:background="@drawable/bg_border_ltgray_dash2"
        android:gravity="center"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:singleLine="true"
        android:text="718"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pannelBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:singleLine="true"
        android:text="--:--"
        android:textColor="@color/tint_gray"
        android:textSize="9sp" />

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/bottomIndicators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1dip"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pagesTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_weight="1"
                android:minWidth="50dip"
                android:singleLine="true"
                android:text="--:--"
                android:textColor="@color/tint_gray"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/pagesCountIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/progressDraw"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:ellipsize="start"
                android:gravity="center"
                android:singleLine="true"
                android:text="-/-"
                android:textColor="@color/tint_gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/flippingIntervalView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@+id/pagesCountIndicator"
                android:minEms="3"
                android:singleLine="true"
                android:text="{10}"
                android:textColor="@color/tint_gray"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/pagesPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:layout_weight="1"
                android:drawablePadding="0dip"
                android:gravity="right"
                android:minWidth="50dip"
                android:singleLine="true"
                android:text="--%"
                android:textColor="@color/tint_gray"
                android:textSize="9sp" />
        </LinearLayout>

        <com.foobnix.pdf.info.view.ProgressDraw
            android:id="@+id/progressDraw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress" />
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:contentDescription="@null"
            android:theme="@style/ActionBarStyle"
            android:visibility="visible"
            app:layout_collapseMode="pin"
            app:navigationContentDescription="@string/buttonBack"
            app:navigationIcon="@drawable/ic_arrow_backspace_orange"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dip"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/moveCenter"
                        style="@style/buttonWhite"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="align document"
                        android:src="@drawable/glyphicons_114_justify_new"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/onMove"
                        style="@style/buttonWhite"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/move"
                        android:src="@drawable/glyphicons_187_move"
                        android:visibility="gone" />

                    <com.foobnix.pdf.info.view.UnderlineImageView
                        android:id="@+id/onBC"
                        style="@style/buttonWhite"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/contrast"
                        android:src="@drawable/glyphicons_190_brightness_my"
                        android:visibility="gone" />

                    <com.foobnix.pdf.info.view.UnderlineImageView
                        android:id="@+id/onCrop"
                        style="@style/buttonWhite"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/crop_white_borders"
                        android:src="@drawable/glyphicons_94_crop"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/activity_horizontal_view__imageview_search"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:contentDescription="@string/search"
                        android:textColor="#ffffff"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_search_grey" />

                    <ImageView
                        android:id="@+id/activity_horizontal_view__imageview_daylight"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/brightness"
                        app:srcCompat="@drawable/ic_daylight_gray" />

                    <ImageView
                        android:id="@+id/activity_horizontal_view__imageview_bookmars"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/bookmarks"
                        app:srcCompat="@drawable/ic_tag_gray" />

                    <ImageView
                        android:id="@+id/activity_horizontal_view__imageview_menumore"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/menu"
                        app:srcCompat="@drawable/ic_more_gray" />

                    <ImageView
                        android:id="@+id/onFullScreen"
                        style="@style/buttonWhite"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/full_screen"
                        android:src="@drawable/glyphicons_488_fit_image_to_frame"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/bookPref"
                        style="@style/buttonWhite"
                        android:layout_width="@dimen/wh_button"
                        android:layout_height="@dimen/wh_button"
                        android:layout_weight="0"
                        android:contentDescription="@string/preferences"
                        android:src="@drawable/glyphicons_137_cogwheel"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/pagesTime1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="2dip"
                    android:layout_weight="1"
                    android:minWidth="50dip"
                    android:singleLine="true"
                    android:text="--:--"
                    android:textColor="@color/white"
                    android:textSize="9sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/msg_loading"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="normal"></TextView>

        <TextView
            android:id="@+id/chapter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/msg_loading"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="gone"></TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/ttsActive1"
        style="@style/buttonWhite"
        android:layout_width="@dimen/wh_button"
        android:layout_height="@dimen/wh_button"
        android:layout_alignParentLeft="true"
        android:layout_margin="0dip"
        android:background="@drawable/bg_search_second_clickable"
        android:contentDescription="read aloudW"
        android:padding="7dip"
        android:src="@drawable/glyphicons_185_volume_up"
        android:tint="@color/white"
        android:visibility="gone" />

    <!--    <com.foobnix.tts.TTSControlsView-->
    <!--        android:id="@+id/ttsActive"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_marginBottom="10dip" />-->

    <FrameLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <include layout="@layout/document_footer" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/toastBrightnessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_my_toast"
        android:drawableLeft="@drawable/ic_daylight_gray"
        android:drawablePadding="10dip"
        android:drawableTint="@color/white"
        android:padding="12dip"
        android:text="@string/brightness"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />


    <ImageView
        android:id="@+id/anchorX"
        android:layout_width="@dimen/wh_button"
        android:layout_height="@dimen/wh_button"
        android:layout_marginTop="100dip"
        android:src="@drawable/glyphicons_basic_299_circle_selected"
        android:tint="@color/tint_blue" />

    <ImageView
        android:id="@+id/anchorY"
        android:layout_width="@dimen/wh_button"
        android:layout_height="@dimen/wh_button"
        android:layout_marginTop="150dip"
        android:src="@drawable/glyphicons_basic_298_circle_empty"
        android:tint="@color/tint_blue" />

    <FrameLayout
        android:id="@+id/anchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:minWidth="10dip"
        android:minHeight="10dip"
        android:visibility="gone" />

</RelativeLayout>